Update APIs / Patterns for Java 17