@@ -38,7 +38,7 @@ public class ServiceRequestResolver extends BaseRequestResourceResolver {
             serviceRequest.setInstantiatesCanonical(
                     Collections.singletonList(new CanonicalType(activityDefinition.getUrl()
                             + (activityDefinition.hasVersion()
-                                    ? String.format("|%s", activityDefinition.getVersion())
+                                    ? "|%s".formatted(activityDefinition.getVersion())
                                     : ""))));
         }
 
@@ -55,7 +55,7 @@ public class ServiceRequestResolver extends BaseRequestResourceResolver {
         if (activityDefinition.hasCode()) {
             serviceRequest.setCode(new CodeableReference(activityDefinition.getCode()));
         } else if (!activityDefinition.hasDynamicValue()) {
-            throw new FHIRException(String.format(MISSING_CODE_PROPERTY, "ServiceRequest"));
+            throw new FHIRException(MISSING_CODE_PROPERTY.formatted("ServiceRequest"));
         }
 
         if (activityDefinition.hasBodySite()) {
