@@ -3,7 +3,7 @@ package org.opencds.cqf.fhir.cr.cpg.r4;
 import static org.opencds.cqf.fhir.test.Resources.getResourcePath;
 
 import ca.uhn.fhir.context.FhirContext;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.function.Supplier;
 import org.hl7.fhir.r4.model.Bundle;
@@ -86,7 +86,7 @@ public class Library {
         public Library.Given repositoryFor(String repositoryPath) {
             this.repository = new IgRepository(
                     FhirContext.forR4Cached(),
-                    Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
             return this;
         }
 
