@@ -28,7 +28,7 @@ public class Repositories {
             case R4 -> Clients.forEndpoint(fhirContext, (org.hl7.fhir.r4.model.Endpoint) endpoint);
             case R5 -> Clients.forEndpoint(fhirContext, (org.hl7.fhir.r5.model.Endpoint) endpoint);
             default -> throw new IllegalArgumentException(
-                    String.format("unsupported FHIR version: %s", fhirVersion.getFhirVersionString()));
+                    "unsupported FHIR version: %s".formatted(fhirVersion.getFhirVersionString()));
         };
     }
 
@@ -73,8 +73,8 @@ public class Repositories {
             case DSTU3 -> new ResourceMatcherDSTU3();
             case R4 -> new ResourceMatcherR4();
             case R5 -> new ResourceMatcherR5();
-            default -> throw new NotImplementedException(String.format(
-                    "Resource matching is not implemented for FHIR version: %s", fhirVersion.getFhirVersionString()));
+            default -> throw new NotImplementedException("Resource matching is not implemented for FHIR version: %s"
+                    .formatted(fhirVersion.getFhirVersionString()));
         };
     }
 }
